third_party/rust/pin-project/tests/ui/pin_project/overlapping_unpin_struct.stderr
error[E0277]: `PhantomPinned` cannot be unpinned
  --> tests/ui/pin_project/overlapping_unpin_struct.rs:18:16
   |
18 |     is_unpin::<S<PhantomPinned>>(); //~ ERROR E0277
   |                ^^^^^^^^^^^^^^^^ within `_::__S<'_, PhantomPinned>`, the trait `Unpin` is not implemented for `PhantomPinned`
   |
   = note: consider using the `pin!` macro
           consider using `Box::pin` if you need to access the pinned value outside of the current scope
note: required because it appears within the type `__S<'_, PhantomPinned>`
  --> tests/ui/pin_project/overlapping_unpin_struct.rs:6:8
   |
6  | struct S<T> {
   |        ^
note: required for `S<PhantomPinned>` to implement `Unpin`
  --> tests/ui/pin_project/overlapping_unpin_struct.rs:5:1
   |
5  | #[pin_project]
   | ^^^^^^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
6  | struct S<T> {
   |        ^^^^
note: required by a bound in `is_unpin`
  --> tests/ui/pin_project/overlapping_unpin_struct.rs:15:16
   |
15 | fn is_unpin<T: Unpin>() {}
   |                ^^^^^ required by this bound in `is_unpin`
   = note: this error originates in the derive macro `::pin_project::__private::__PinProjectInternalDerive` (in Nightly builds, run with -Z macro-backtrace for more info)
